--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,52 +11,62 @@
     <hr />
 
     <h2>Índice</h2>
-    <p><strong><u>INSTRUÇÕES:</u> </strong>Neste índice você deve colocar os tópicos que mais entendeu. Estes apenas são sugestões.</p>
+    <p><strong><u>INSTRUÇÕES:</u></strong> Neste índice você deve colocar os tópicos que mais entendeu. Estes apenas são sugestões.</p>
     <ul>
-        <li><a href="#">História dos computadores</a></li>
-        <li><a href="#">O que são <i>Clients</i>?</a></li>
-        <li><a href="#">O que são <i>Servers</i>?</a></li>
-        <li><a href="#">Como é uma estrutura básica de um HTML?</a></li>
-        <li><a href="#">Entendendo a diferença entre listas ordenadas e não ordenadas</a></li>
-        <li><a href="#">Links de referências</a></li>
+        <li><a href="#historia">História dos computadores</a></li>
+        <li><a href="#clients">O que são <i>Clients</i>?</a></li>
+        <li><a href="#servers">O que são <i>Servers</i>?</a></li>
+        <li><a href="#estrutura-html">Como é uma estrutura básica de um HTML?</a></li>
+        <li><a href="#listas">Entendendo a diferença entre listas ordenadas e não ordenadas</a></li>
+        <li><a href="#referencias">Links de referências</a></li>
     </ul>
 
-    <h2>História dos computadores</h2>
-    <p><strong><u>INSTRUÇÕES:</u> </strong>Neste trecho, coloque com suas palavras o que entendeu sobre o assunto. 
-       Não esqueça de colocar links para outros sites e também de formatar o texto com 
+    <h2 id="historia">História dos computadores</h2>
+    <p><strong><u>INSTRUÇÕES:</u></strong> Neste trecho, coloque com suas palavras o que entendeu sobre o assunto.
+       Não esqueça de colocar links para outros sites e também de formatar o texto com
        <strong>negrito</strong>, <i>itálico</i> e <u>sublinhado</u> quando necessário.</p>
-    <p>Não esqueça também de colocar o link para voltar até o índice. (Lembra das âncoras?)</p>
+    <p><a href="#indice">Voltar ao Índice</a></p>
 
-    <h2>O que são <i>Clients</i>?</h2>
-    <p><strong><u>INSTRUÇÕES:</u> </strong>Neste trecho, coloque com suas palavras o que entendeu sobre o assunto. 
-       Não esqueça de colocar links para outros sites e também de formatar o texto com 
+    <h2 id="clients">O que são <i>Clients</i>?</h2>
+    <p><strong><u>INSTRUÇÕES:</u></strong> Neste trecho, coloque com suas palavras o que entendeu sobre o assunto.
+       Não esqueça de colocar links para outros sites e também de formatar o texto com
        <strong>negrito</strong>, <i>itálico</i> e <u>sublinhado</u> quando necessário.</p>
-    <p>Não esqueça também de colocar o link para voltar até o índice. (Lembra das âncoras?)</p>
+    <p><a href="#indice">Voltar ao Índice</a></p>
 
-    <h2>O que são <i>Servers</i>?</h2>
-    <p><strong><u>INSTRUÇÕES:</u> </strong>Neste trecho, coloque com suas palavras o que entendeu sobre o assunto. 
-       Não esqueça de colocar links para outros sites e também de formatar o texto com 
+    <h2 id="servers">O que são <i>Servers</i>?</h2>
+    <p><strong><u>INSTRUÇÕES:</u></strong> Neste trecho, coloque com suas palavras o que entendeu sobre o assunto.
+       Não esqueça de colocar links para outros sites e também de formatar o texto com
        <strong>negrito</strong>, <i>itálico</i> e <u>sublinhado</u> quando necessário.</p>
-    <p>Não esqueça também de colocar o link para voltar até o índice. (Lembra das âncoras?)</p>
+    <p><a href="#indice">Voltar ao Índice</a></p>
 
-    <h2>Como é uma estrutura básica de um HTML?</h2>
-    <p><strong><u>INSTRUÇÕES:</u> </strong>Neste trecho, coloque com suas palavras o que entendeu sobre o assunto. 
-       Não esqueça de colocar links para outros sites e também de formatar o texto com 
+    <h2 id="estrutura-html">Como é uma estrutura básica de um HTML?</h2>
+    <p><strong><u>INSTRUÇÕES:</u></strong> Neste trecho, coloque com suas palavras o que entendeu sobre o assunto.
+       Não esqueça de colocar links para outros sites e também de formatar o texto com
        <strong>negrito</strong>, <i>itálico</i> e <u>sublinhado</u> quando necessário.</p>
-    <p>Não esqueça também de colocar o link para voltar até o índice. (Lembra das âncoras?)</p>
+    <p><a href="#indice">Voltar ao Índice</a></p>
 
-    <h2>Entendendo a diferença entre listas ordenadas e não ordenadas</h2>
-    <p><strong><u>INSTRUÇÕES:</u> </strong>Neste trecho, coloque com suas palavras o que entendeu sobre o assunto. 
-       Não esqueça de colocar links para outros sites e também de formatar o texto com 
+    <h2 id="listas">Entendendo a diferença entre listas ordenadas e não ordenadas</h2>
+    <p><strong><u>INSTRUÇÕES:</u></strong> Neste trecho, coloque com suas palavras o que entendeu sobre o assunto.
+       Não esqueça de colocar links para outros sites e também de formatar o texto com
        <strong>negrito</strong>, <i>itálico</i> e <u>sublinhado</u> quando necessário.</p>
-    <p>Não esqueça também de colocar o link para voltar até o índice. (Lembra das âncoras?)</p>
+    <p><a href="#indice">Voltar ao Índice</a></p>
 
-    <h2>Links de referências</h2>
-    <p><strong><u>INSTRUÇÕES:</u> </strong>Coloque links para outras páginas que falam sobre estes assuntos. Não esquece de que precisa abrir em outra aba/janela do navegador.</p>
+    <h2 id="referencias">Links de referências</h2>
+    <p><strong><u>INSTRUÇÕES:</u></strong> Coloque links para outras páginas que falam sobre estes assuntos. Não esquece de que precisa abrir em outra aba/janela do navegador.</p>
     <ul>
-        <li><a href="#">http://dio.me</a></li>
-        <li><a href="#">http://w3c.org</a></li>
+        <li><a href="http://dio.me" target="_blank">DIO</a></li>
+        <li><a href="http://w3c.org" target="_blank">W3C</a></li>
     </ul>
+
+    <p><abbr title="Document Object Model">DOM</abbr> é uma interface de programação para documentos HTML e XML. Ele representa a página de forma que os programas possam alterar a estrutura do documento, seu estilo e seu conteúdo.</p>
+
+    <p>Esse texto está <mark>destacado</mark> para chamar a atenção do leitor.</p>
+    <p>Essa é uma anotação em texto <small>menor</small>.</p>
+    <p>Texto com <del>parte deletada</del> para indicar alterações.</p>
+    <p>Texto com <sup>superíndice</sup> e <sub>subíndice</sub>.</p>
+    <blockquote>
+        <p>Esta é uma citação em bloco.</p>
+    </blockquote>
 
 </body>
 </html>
